--- a/index.css
+++ b/index.css
@@ -1,11 +1,95 @@
-.container {
-    background: #646472;
-    display: inline-block;
-    border: #3a3a42 solid 10px;
+/* Main Container */
+.flex-container {
+    display: flex;
+    flex-direction: column;
+
+    background: #4d4d5a;
+    border: 10px solid #3a3a42;
 
     width: 500px;
+
     margin-left: auto;
     margin-right: auto;
+}
+
+
+
+/* Input Boxes */
+input[type="number"] {
+    width: 37px;
+}
+
+
+
+/* Row / Column Classes */
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+
+
+/* Set Text Font And Color */
+body {
+    color: #f8f8f8;
+    font-family: Andale Mono, monospace;
+}
+
+
+
+/* Board / Canvas */
+#board {
+    height: 500px;
+    border-bottom: 10px solid #3a3a42;
+}
+#canvas { background-color: #707086; }
+
+
+
+/* Buttons */
+#buttons {
+    border-bottom: 10px solid #3a3a42;
+    padding: 10px;
+}
+
+
+
+/* Options */
+#options {
+    display: flex;
+    padding: 1%;
+    border-bottom: 10px solid #3a3a42;
+}
+#option { padding: 5px }
+
+
+
+
+/* Slider */
+#slider-container {
+    display: block;
+    padding: 5px;
+}
+#slider {
+    width: 95%;
+}
+
+
+
+
+/*
+.flex-container {
+    display: flex;
+
+    width: 500px;
 }
 
 p {
@@ -13,16 +97,17 @@ p {
     padding: 0px;
 }
 
-input[type="number"] { width: 37px; }
+
+
+select { width: 90px; }
 
 
 
-#board {
-    height: 500px;
-    background: #9595af;
-}
+#board { height: 500px; }
 
-#buttons { padding: 5px; border-top: #3a3a42 solid 10px; }
+#canvas { background: #707086; }
+
+#buttons { padding: 10px; border-top: #3a3a42 solid 10px; }
 
 #boxes {
     column-count: 2;
@@ -44,6 +129,6 @@ input[type="number"] { width: 37px; }
 #slider { width: 95%; }
 
 body {
-    color: #f8f8f8;
-    font-family: Andale Mono, monospace;
+
 }
+*/
